--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <section class="container">
         <h1>Calcule seu IMC</h1>
         <form action="/" id="form" method="POST">
-            <label for="peso">Peso</label>
+            <label for="peso"><b>Peso</b></label>
             <input type="text" id="peso" name="peso">
 
-            <label for="altura">Altura</label>
+            <label for="altura"><b>Altura</b></label>
             <input type="text" id="altura" name="altura">
 
             <button type="submit">Enviar</button>
